# cursor-companion

./: .gitignore  README.md  pyproject.toml
packaging/aur/: .SRCINFO  PKGBUILD
packaging/linux/: io.github.NEOLPAR.CodexPetsCursor.desktop  io.github.NEOLPAR.CursorCompanion.desktop
src/codex_pets_cursor/: app.py  autostart.py  browser.py  config.py  kwin_bridge.py  manager.py  overlay.py  paths.py  pets.py
src/cursor_companion/: __main__.py  app.py  autostart.py  config.py  kwin_bridge.py  manager.py  overlay.py  paths.py
